--- a/capstone/vue/package.json
+++ b/capstone/vue/package.json
@@ -10,8 +10,14 @@
     "test:unit": "vue-cli-service test:unit"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.2.0",
+    "@fortawesome/free-brands-svg-icons": "^6.2.0",
+    "@fortawesome/free-regular-svg-icons": "^6.2.0",
+    "@fortawesome/free-solid-svg-icons": "^6.2.0",
+    "@fortawesome/vue-fontawesome": "^2.0.8",
     "axios": "^0.21.1",
     "core-js": "^3.9.1",
+    "font-awesome-animation": "^1.1.1",
     "vue": "^2.6.12",
     "vue-router": "^3.5.1",
     "vuex": "^3.6.2"
@@ -21,13 +27,13 @@
     "@vue/cli-plugin-e2e-cypress": "^4.5.11",
     "@vue/cli-plugin-eslint": "^4.5.11",
     "@vue/cli-plugin-unit-mocha": "^4.5.11",
-    "vue-loader-v16": "npm:vue-loader@16.1.2",
     "@vue/cli-service": "^4.5.11",
     "@vue/test-utils": "1.1.3",
     "babel-eslint": "^10.0.1",
     "chai": "^4.3.3",
     "eslint": "^7.21.0",
     "eslint-plugin-vue": "^7.7.0",
+    "vue-loader-v16": "npm:vue-loader@16.1.2",
     "vue-template-compiler": "^2.6.12"
   }
 }
