fixed title on nav bar

--- a/capstone/vue/package.json
+++ b/capstone/vue/package.json
@@ -19,6 +19,7 @@
     "core-js": "^3.9.1",
     "font-awesome-animation": "^1.1.1",
     "vue": "^2.6.12",
+    "vue-burger-menu": "^2.0.5",
     "vue-router": "^3.5.1",
     "vuex": "^3.6.2"
   },
