--- a/capstone/vue/package.json
+++ b/capstone/vue/package.json
@@ -18,6 +18,7 @@
     "axios": "^0.21.1",
     "core-js": "^3.9.1",
     "font-awesome-animation": "^1.1.1",
+    "react-draggable": "^4.4.5",
     "vue": "^2.6.12",
     "vue-burger-menu": "^2.0.5",
     "vue-router": "^3.5.1",
