--- a/capstone/vue/package.json
+++ b/capstone/vue/package.json
@@ -25,6 +25,7 @@
     "vue-burger-menu": "^2.0.5",
     "vue-flickity": "^1.2.1",
     "vue-router": "^3.5.1",
+    "vueperslides": "^3.4.2",
     "vuex": "^3.6.2"
   },
   "devDependencies": {
