--- a/capstone/vue/package.json
+++ b/capstone/vue/package.json
@@ -26,6 +26,7 @@
     "vue-flickity": "^1.2.1",
     "vue-router": "^3.5.1",
     "vueperslides": "^3.4.2",
+    "vuetify": "^2.6.10",
     "vuex": "^3.6.2"
   },
   "devDependencies": {
