Fixed some JS console errors

--- a/capstone/java/src/main/resources/application.properties
+++ b/capstone/java/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 # datasource connection properties
-spring.datasource.url=jdbc:postgresql://localhost:5432/movie_recommendations_db
+#spring.datasource.url=jdbc:postgresql://localhost:5432/movie_recommendations_db
+spring.datasource.url=jdbc:postgresql://reel-db-db.internal:5432/movie_recommendations_db
 spring.datasource.name=movie_recommendations_db
 spring.datasource.username=final_capstone_appuser
 spring.datasource.password=finalcapstone
